data/all_generated_tests/raw_wast_tests/unreachable_IncorrectBranchTargetResolution_919.wast
;; 10. **Test Description:** Place multiple `unreachable` instructions within different control flow constructs (blocks, loops, if-else) and use a complex set of `br` instructions with mixed levels of nesting to ensure each `br` resolves to the intended target.     - **Constraint Checked:** Validates mixed nesting and complex branching scenarios.     - **Incorrect Branch Target Relation:** Ensures mixed nesting `br` instructions resolve to correct targets, avoiding unintended `unreachable` traps.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (loop (result i32)
          (if (result i32)
            (i32.const 1)
            (then (unreachable))
            (else (br 1 (unreachable)))
          )
        )
      )
      (br 0 (i64.const 1))
    )
  )
  "type mismatch"
)